# libevmu

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  evmu-core.pro
doc/: Doxyfile  DoxygenLayout.xml
doc/doxygenapidark/: custom.css  custom_dark_theme.css  jquery_ui.js  qtify.css
doc/pages/: filesystem.dox  formats.dox  isa.dox  mem_map.dox
include/: gyro_vmu_battery.h  gyro_vmu_cpu.h  gyro_vmu_device.h  gyro_vmu_instr.h  gyro_vmu_osc.h  gyro_vmu_port1.h  gyro_vmu_version.h  gyro_vmu_vmi.h
include/evmu-core/: gyro_vmu_adapter.h  gyro_vmu_buzzer.h  gyro_vmu_cpu.h  gyro_vmu_device.h  gyro_vmu_display.h  gyro_vmu_flash.h  gyro_vmu_icondata.h  gyro_vmu_isr.h  gyro_vmu_lcd.h  gyro_vmu_memory.h  gyro_vmu_osc.h  gyro_vmu_port7.h  gyro_vmu_sfr.h  gyro_vmu_tcp.h  gyro_vmu_timers.h  gyro_vmu_util.h  gyro_vmu_version.h  gyro_vmu_vmi.h  gyro_vmu_vms.h
legacy/include/evmu-core/: gyro_vmu_bios.h  gyro_vmu_device.h  gyro_vmu_flash.h  gyro_vmu_gamepad.h  gyro_vmu_instr.h  gyro_vmu_maple.h  gyro_vmu_util.h  gyro_vmu_version.h  gyro_vmu_vmi.h
legacy/include/evmu-core/formats/: gyro_vmu_pso_img.h  gyro_vmu_vms.h
legacy/source/: gyro_vmu_battery.c  gyro_vmu_bios.c  gyro_vmu_buzzer.c  gyro_vmu_cpu.c  gyro_vmu_device.c  gyro_vmu_extra_bg_pvr.c  gyro_vmu_flash.c  gyro_vmu_icondata.c  gyro_vmu_instr.c  gyro_vmu_isr.c  gyro_vmu_osc.c  gyro_vmu_version.c  gyro_vmu_vms.c
legacy/source/formats/: gyro_vmu_extra_bg_pvr.c  gyro_vmu_icondata.c  gyro_vmu_lcd.c  gyro_vmu_vmi.c  gyro_vmu_vms.c
legacy/wrappers/cpp/include/evmu-core-cpp/: evmu_device.hpp  evmu_flash.hpp
legacy/wrappers/cpp/source/: evmu_device.cpp  evmu_flash.cpp
lib/: CMakeLists.txt
lib/api/: evmu_api.h
lib/api/evmu/: evmu_api.h  evmu_types.h  evmu_version.h
lib/api/evmu/events/: evmu_clock_event.h  evmu_memory_event.h
lib/api/evmu/fs/: evmu_dir_entry.h  evmu_extra_bg_pvr.h  evmu_fat.h  evmu_file_manager.h  evmu_fs.h  evmu_fs_utils.h  evmu_icondata.h  evmu_nexus.h  evmu_vmi.h  evmu_vms.h
lib/api/evmu/hw/: evmu_address_space.h  evmu_battery.h  evmu_buzzer.h  evmu_clock.h  evmu_cpu.h  evmu_device.h  evmu_flash.h  evmu_gamepad.h  evmu_isa.h  evmu_lcd.h  evmu_memory.h  evmu_peripheral.h  evmu_pic.h  evmu_port7.h  evmu_ram.h  evmu_rom.h  evmu_serial.h  evmu_sfr.h  evmu_timers.h  evmu_wave.h  evmu_wram.h
lib/api/evmu/types/: evmu_behavior.h  evmu_emulator.h  evmu_entity.h  evmu_ibehavior.h  evmu_imemory.h  evmu_peripheral.h  evmu_simulation.h  evmu_typedefs.h
lib/api/evmu/util/: evmu_bios.h  evmu_context.h  evmu_disassembler.h  evmu_result.h  evmu_result.h.autosave  evmu_utils.h
lib/lib/libGyroLogic/: gyro_signal.h
lib/source/: evmu_version.c
lib/source/events/: evmu_clock_event.c  evmu_memory_event.c
lib/source/fs/: evmu_dir_entry.c  evmu_fat.c  evmu_fat_.h  evmu_file_manager.c  evmu_fs_utils.c  evmu_icondata.c  evmu_nexus.c  evmu_vmi.c  evmu_vms.c
lib/source/hw/: evmu_battery.c  evmu_battery_.h  evmu_buzzer.c  evmu_buzzer_.h  evmu_clock.c  evmu_clock_.h  evmu_cpu.c  evmu_cpu.c.autosave  evmu_cpu_.h  evmu_cpu_.h.autosave  evmu_device.c  evmu_device_.h  evmu_fat.c  evmu_flash.c  evmu_flash_.h  evmu_gamepad.c  evmu_gamepad_.h  evmu_isa.c  evmu_lcd.c  evmu_lcd_.h  evmu_memory.c  evmu_memory_.h  evmu_osc.c  evmu_peripheral.c  evmu_peripheral_.h  evmu_pic.c  evmu_pic_.h  evmu_port1.c  evmu_port7.c  evmu_ram.c  evmu_ram_.h  evmu_rom.c  evmu_rom_.h  evmu_timers.c  evmu_timers_.h  evmu_wram.c  evmu_wram_.h
lib/source/os/: evmu_os_callbacks.c
lib/source/types/: evmu_behavior.c  evmu_emulator.c  evmu_emulator_.h  evmu_entity.c  evmu_ibehavior.c  evmu_imemory.c  evmu_marshal.c  evmu_marshal_.h  evmu_peripheral.c  evmu_peripheral_.h  evmu_simulation.c
lib/source/util/: evmu_bios.c  evmu_context.c  evmu_context_.h  evmu_disassembler.c  evmu_lcd.c  evmu_maple.c  evmu_tcp.c
source/: gyro_vmu_bios.c  gyro_vmu_buzzer.c  gyro_vmu_cpu.c  gyro_vmu_device.c  gyro_vmu_disassembler.c  gyro_vmu_display.c  gyro_vmu_extra_bg_pvr.c  gyro_vmu_flash.c  gyro_vmu_gamepad.c  gyro_vmu_icondata.c  gyro_vmu_maple.c  gyro_vmu_memory.c  gyro_vmu_osc.c  gyro_vmu_port1.c  gyro_vmu_port7.c  gyro_vmu_pso_img.c  gyro_vmu_serial.c  gyro_vmu_tcp.c  gyro_vmu_timers.c  gyro_vmu_util.c  gyro_vmu_vmi.c  gyro_vmu_vms.c
test/: CMakeLists.txt  main.cpp
test/include/: evmu_cpu_test_suite.h  evmu_isa_test_suite.h  evmu_memory_test_suite.h  test_evmu_context.hpp
test/source/: evmu_cpu_test_suite.c  evmu_isa_test_suite.c  evmu_memory_test_suite.c  evmu_test_main.c
wrappers/: CMakeLists.txt
wrappers/cpp/: CMakeLists.txt
wrappers/cpp/api/evmu/cpp/util/: evmu_context.hpp  evmu_types.hpp
wrappers/cpp/include/evmu-core-cpp/: evmu_device.hpp  evmu_flash.hpp
wrappers/cpp/source/: evmu_context.cpp  evmu_device.cpp  evmu_flash.cpp
